syntax = "proto3";

package one_peace_embedder;

service OnePeaceEmbedder {
  rpc EncodeText(TextRequest) returns (VectorResponse);
  rpc EncodeImage(ImageRequest) returns (VectorResponse);
  rpc EncodeAudio(AudioRequest) returns (VectorResponse);
}

message TextRequest {
  required string text = 1;
}

message ImageRequest {
  required bytes content = 1;
}

message AudioRequest {
  required bytes content = 1;
  required int32 sample_rate = 2;
}

message VectorResponse {
  repeated float vector = 1;
}
